Correction schéma Book et ajout de la route pour modifier un livre
