# backend/swagger.yaml
@@ -71,6 +71,8 @@ paths:
                                 items:
                                     type: object
                                     properties:
+                                        userId:
+                                            type: string
                                         title:
                                             type: string
                                         author:
@@ -108,6 +110,8 @@ paths:
                             schema:
                                 type: object
                                 properties:
+                                    userId:
+                                        type: string
                                     title:
                                         type: string
                                     author:
@@ -234,6 +238,36 @@ paths:
             responses:
                 "200":
                     description: Réquête réussie ✅
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    type: object
+                                    properties:
+                                        userId:
+                                            type: string
+                                        title:
+                                            type: string
+                                        author:
+                                            type: string
+                                        imageUrl:
+                                            type: string
+                                        year:
+                                            type: integer
+                                        genre:
+                                            type: string
+                                        ratings:
+                                            type: array
+                                            items:
+                                                type: object
+                                                properties:
+                                                    userId:
+                                                        type: string
+                                                    grade:
+                                                        type: number
+                                        averageRating:
+                                            type: number
                 "400":
                     description: Requête invalide ⛔️
 
